# rust_playground

exercises/enum-match/src/: main.rs
exercises/generics_traits_lifetimes/src/: generic_types.rs  lifetimes.rs  main.rs  traits.rs
exercises/getting-started/guessing-game/src/: main.rs
exercises/getting-started/hashmap/src/: main.rs
exercises/getting-started/hello-cargo/src/: main.rs
exercises/ownership/src/: main.rs
exercises/structs/src/: main.rs
rest_api/: .env.example  Cargo.toml
rest_api/src/: main.rs
rest_api_v2/: .env.example  Cargo.toml
rest_api_v2/src/: handler.rs  main.rs  route.rs  schema.rs
