[package]
name = "rest_api"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "mysql"] }
serde_json = "1.0.121"
axum = "0.7.5"
